# decodable-words-generator

./: .gitignore  LICENSE  MANIFEST.in  app.py  phonemes.py  playground.ipynb  pyproject.toml  readme.md  requirements.txt  sample.json  word_decoder.py  word_generator.py
backend/: app.py  constants.py  main.py  requirements.txt  utils.py  word_generator.py
backend/app/: app.py  sample.json
backend/app/controllers/: word_controller.py
backend/app/services/: utils.py  word.py  word_service.py
backend/src/: bad_words.py  filter_words.py  main.py
data_generation/: constants.py  generate_data.py  phonemes.py  requirements.txt  utils.py  word.py  word_decoder.py
decodable-words-generator/: constants.py  sample.json
decodable-words-generator/tests/: test_data_generation.py
decodable_words_generator/: constants.py  generate_data.py  phonemes.py  top_n.py  utils.py  word.py  word_decoder.py
decodable_words_generator/processed/: words-20000-decodable-2000-undecodable.pickle
decodable_words_generator/tests/: test_data_generation.py  test_word_patterns.py
frontend/src/: app.js  index.css  index.html  styles.css
frontend/src/components/: CheckboxGroup.js  CheckboxGroupContainer.js  CheckboxGroupWithToggle.js  PhoneticGroups.js  ResponseDisplay.js  SightWordGroups.js
frontend/src/constants/: phoneticSets.js
