[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decodable_words_generator"
version = "0.2.1"
description = "A Python library for generating a DataFrame with linguistic features of words to assess their decodability."
readme = "readme.md"
authors = [{ name = "Chris Pleasants", email = "chris.j.pleasants@gmail.com" }]
dependencies = [
    "nltk",
    "wordfreq",
    "spacy",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"
]
requires-python = ">=3.6"
license = { text = "MIT" }